-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b04
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8045240 | 8u25 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8036008 | 8u20 | Goetz Lindenmaier | P4 | Closed | Fixed | b04 |
| JDK-8053243 | emb-8u26 | Goetz Lindenmaier | P4 | Resolved | Fixed | b17 |
The template template parameters are not needed to express the functionality
of the binaryTreeDictionary. This change replaces them by simple class templates and explicit
instantiation. This simplifies consumption of the openJDK in scenarios
requiring older C++ compilers.
This change also removes dead get_chunk() from binaryTreeDictionary.cpp
of the binaryTreeDictionary. This change replaces them by simple class templates and explicit
instantiation. This simplifies consumption of the openJDK in scenarios
requiring older C++ compilers.
This change also removes dead get_chunk() from binaryTreeDictionary.cpp
- backported by
-
JDK-8045240 Remove use of template template parameters from binaryTreeDictionary.
-
- Resolved
-
-
JDK-8053243 Remove use of template template parameters from binaryTreeDictionary.
-
- Resolved
-
-
JDK-8036008 Remove use of template template parameters from binaryTreeDictionary.
-
- Closed
-