8034171: Remove use of template template parameters from binaryTreeDictionary

Reviewed-by: mgerdin, jmasa